
Changelog
=========

1.0.8 (unreleased)
------------------

- Adds a new view for exports which initially offers the existing reservations
  export and a new 'compact' export.

- Having different resources with different formsets no longer leads to errors
  when trying to do multiple reservations.

- Increases the maximum allocation quota from 100 to 1000

- Fixes typo in English text.

- Improves German texts.

1.0.7
-----

- Removes potentially dangerous orphan removal from settings panel.

- All reservation records stored in Postgres belonging to a certain resource
  are now wiped if said resource is deleted.

  The exception is the removal of a plone site through the ZMI. Though it is
  possible to intercept that event it is not entirely save to discard all
  resources that are part of plone site being deleted. It is namely possible
  that those have the same uuid as another existing resource of another site.

  To clean these kind of data zombies it might be good to create a tool with
  which reservations before a given date are wiped or archived.

  This is however not a priority as it is recommended to have a separate
  database for each site anyway and until there's a high volume reservations
  site in existance this won't ever be a problem. Postgres can handle unused
  records.

- Stops allocation.mirror_of from potentially being NULL.

- Fixes a bug where reservations could be added to waitinglists on allocations
  that were not meant to have a waitinglist.

- Fixes typo in German translation

1.0.6
-----

- Adds the ability to edit the formdata of a reservation through the management
  or the report interface

- Adds the ability to define Manager Formsests which are the same as Default
  Formsets but can only be edited by someone with the appropriate permission.

  With these formsets and the ability to edit the formdata it's possible to
  create simple ways to organize reservations. A manager formset could be added