@@ -8,6 +8,8 @@ Changelog
 - Adds a new view for exports which initially offers the existing reservations
   export and a new 'compact' export.
 
+- Adds created / modified columns to reservation exports.
+
 - Having different resources with different formsets no longer leads to errors
   when trying to do multiple reservations.
 
